--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,7 @@
   ],
   "description": "aggregate identifier",
   "main": "index.html",
-  "moduleType": [
-  ],
+  "moduleType": [],
   "license": "MIT",
   "homepage": "",
   "private": true,
@@ -19,6 +18,7 @@
   ],
   "dependencies": {
     "fingerprintjs2": "^1.1.0",
-    "vue": "^1.0.16"
+    "vue": "^1.0.16",
+    "jsSHA": "jssha#^2.0.2"
   }
 }
